force-app/main/default/objects/Packing_checklist__c/Packing_checklist__c.object-meta.xml
<CustomObject>
    <label>Packing checklist</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Packing checklist</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Packing checklists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>