force-app/main/default/objects/Packing_checklist__c/fields/afterPacking24__c.field-meta.xml
<CustomField>
    <fullName>afterPacking24__c</fullName>
    <label>afterPacking24</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>