force-app/main/default/objects/Packing_checklist__c/fields/afterPacking26__c.field-meta.xml
<CustomField>
    <fullName>afterPacking26__c</fullName>
    <label>afterPacking26</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>