force-app/main/default/objects/Packing_checklist__c/fields/afterPackingDone__c.field-meta.xml
<CustomField>
    <fullName>afterPackingDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(afterPacking24__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(afterPacking25__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(afterPacking26__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(afterPacking27__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>afterPackingDone</label>
    <type>Checkbox</type>
</CustomField>