force-app/main/default/objects/Packing_checklist__c/fields/afterPackingNo__c.field-meta.xml
<CustomField>
    <fullName>afterPackingNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(afterPacking24__c, &quot;NO&quot;),
ISPICKVAL(afterPacking25__c, &quot;NO&quot;),
ISPICKVAL(afterPacking26__c, &quot;NO&quot;),
ISPICKVAL(afterPacking27__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>afterPackingNo</label>
    <type>Checkbox</type>
</CustomField>