force-app/main/default/objects/Packing_checklist__c/fields/ChecklitsDone__c.field-meta.xml
<CustomField>
    <fullName>ChecklitsDone__c</fullName>
    <formula>IF( AND( packingAreaDone__c, containerConditionDone__c, packingContainerDone__c,     dangerousGoodsDone__c,  afterPackingDone__c,  closingContainerDone__c,  dispatchingContainerDone__c   ), 
true, 
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChecklitsDone</label>
    <type>Checkbox</type>
</CustomField>