force-app/main/default/objects/Packing_checklist__c/fields/closingContainer29__c.field-meta.xml
<CustomField>
    <fullName>closingContainer29__c</fullName>
    <label>closingContainer29</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>