force-app/main/default/objects/Packing_checklist__c/fields/closingContainerDone__c.field-meta.xml
<CustomField>
    <fullName>closingContainerDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(closingContainer28__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(closingContainer29__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>closingContainerDone</label>
    <type>Checkbox</type>
</CustomField>