force-app/main/default/objects/Packing_checklist__c/fields/closingContainerNo__c.field-meta.xml
<CustomField>
    <fullName>closingContainerNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(closingContainer28__c, &quot;NO&quot;),
ISPICKVAL(closingContainer29__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>closingContainerNo</label>
    <type>Checkbox</type>
</CustomField>