force-app/main/default/objects/Packing_checklist__c/fields/Container__c.field-meta.xml
<CustomField>
    <fullName>Container__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Container</label>
    <referenceTo>Freight_Container__c</referenceTo>
    <relationshipLabel>Packing checklists</relationshipLabel>
    <relationshipName>Packing_checklists</relationshipName>
    <type>Lookup</type>
</CustomField>