force-app/main/default/objects/Packing_checklist__c/fields/containerCondition10__c.field-meta.xml
<CustomField>
    <fullName>containerCondition10__c</fullName>
    <label>containerCondition10</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>