force-app/main/default/objects/Packing_checklist__c/fields/containerCondition12__c.field-meta.xml
<CustomField>
    <fullName>containerCondition12__c</fullName>
    <label>containerCondition12</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>