force-app/main/default/objects/Packing_checklist__c/fields/containerConditionDone__c.field-meta.xml
<CustomField>
    <fullName>containerConditionDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(containerCondition8__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(containerCondition9__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(containerCondition10__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(containerCondition11__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(containerCondition12__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>containerConditionDone</label>
    <type>Checkbox</type>
</CustomField>