force-app/main/default/objects/Packing_checklist__c/fields/containerConditionNo__c.field-meta.xml
<CustomField>
    <fullName>containerConditionNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(containerCondition8__c, &quot;NO&quot;),
ISPICKVAL(containerCondition9__c, &quot;NO&quot;),
ISPICKVAL(containerCondition10__c, &quot;NO&quot;),
ISPICKVAL(containerCondition11__c, &quot;NO&quot;),
ISPICKVAL(containerCondition12__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>containerConditionNo</label>
    <type>Checkbox</type>
</CustomField>