force-app/main/default/objects/Packing_checklist__c/fields/Contains_NO__c.field-meta.xml
<CustomField>
    <fullName>Contains_NO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contains NO</label>
    <type>Checkbox</type>
</CustomField>