force-app/main/default/objects/Packing_checklist__c/fields/dangerousGoods20__c.field-meta.xml
<CustomField>
    <fullName>dangerousGoods20__c</fullName>
    <label>dangerousGoods20</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>