force-app/main/default/objects/Packing_checklist__c/fields/dangerousGoodsDone__c.field-meta.xml
<CustomField>
    <fullName>dangerousGoodsDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(dangerousGoods20__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dangerousGoods21__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dangerousGoods22__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dangerousGoods23__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dangerousGoodsDone</label>
    <type>Checkbox</type>
</CustomField>