force-app/main/default/objects/Packing_checklist__c/fields/dangerousGoodsNo__c.field-meta.xml
<CustomField>
    <fullName>dangerousGoodsNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(dangerousGoods20__c, &quot;NO&quot;),
ISPICKVAL(dangerousGoods21__c, &quot;NO&quot;),
ISPICKVAL(dangerousGoods22__c, &quot;NO&quot;),
ISPICKVAL(dangerousGoods23__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dangerousGoodsNo</label>
    <type>Checkbox</type>
</CustomField>