force-app/main/default/objects/Packing_checklist__c/fields/dispatchingContainer30__c.field-meta.xml
<CustomField>
    <fullName>dispatchingContainer30__c</fullName>
    <label>dispatchingContainer30</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>