force-app/main/default/objects/Packing_checklist__c/fields/dispatchingContainerDone__c.field-meta.xml
<CustomField>
    <fullName>dispatchingContainerDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(dispatchingContainer30__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dispatchingContainer31__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dispatchingContainer32__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dispatchingContainer33__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(dispatchingContainer34__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dispatchingContainerDone</label>
    <type>Checkbox</type>
</CustomField>