force-app/main/default/objects/Packing_checklist__c/fields/dispatchingContainerNo__c.field-meta.xml
<CustomField>
    <fullName>dispatchingContainerNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(dispatchingContainer30__c, &quot;NO&quot;),
ISPICKVAL(dispatchingContainer31__c, &quot;NO&quot;),
ISPICKVAL(dispatchingContainer32__c, &quot;NO&quot;),
ISPICKVAL(dispatchingContainer33__c, &quot;NO&quot;),
ISPICKVAL(dispatchingContainer34__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>dispatchingContainerNo</label>
    <type>Checkbox</type>
</CustomField>