force-app/main/default/objects/Packing_checklist__c/fields/Freight_Container__c.field-meta.xml
<CustomField>
    <fullName>Freight_Container__c</fullName>
    <label>Freight Container</label>
    <referenceTo>Freight_Container__c</referenceTo>
    <relationshipLabel>Packing checklists</relationshipLabel>
    <relationshipName>Packing_checklists</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>