force-app/main/default/objects/Packing_checklist__c/fields/packingArea1__c.field-meta.xml
<CustomField>
    <fullName>packingArea1__c</fullName>
    <label>packingArea1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>