force-app/main/default/objects/Packing_checklist__c/fields/packingArea2__c.field-meta.xml
<CustomField>
    <fullName>packingArea2__c</fullName>
    <label>packingArea2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>