force-app/main/default/objects/Packing_checklist__c/fields/packingAreaDone__c.field-meta.xml
<CustomField>
    <fullName>packingAreaDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(packingArea1__c, &quot;&apos;&apos;&quot;)), 
NOT(ISPICKVAL(packingArea2__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingArea3__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingArea4__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingArea5__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingArea6__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingArea7__c, &quot;&apos;&apos;&quot;))), 
true, 
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>packingAreaDone</label>
    <type>Checkbox</type>
</CustomField>