force-app/main/default/objects/Packing_checklist__c/fields/packingAreaNo__c.field-meta.xml
<CustomField>
    <fullName>packingAreaNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(packingArea1__c, &quot;NO&quot;),
ISPICKVAL(packingArea2__c, &quot;NO&quot;),
ISPICKVAL(packingArea3__c, &quot;NO&quot;),
ISPICKVAL(packingArea4__c, &quot;NO&quot;),
ISPICKVAL(packingArea5__c, &quot;NO&quot;),
ISPICKVAL(packingArea6__c, &quot;NO&quot;),
ISPICKVAL(packingArea7__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>packingAreaNo</label>
    <type>Checkbox</type>
</CustomField>