force-app/main/default/objects/Packing_checklist__c/fields/packingContainer13__c.field-meta.xml
<CustomField>
    <fullName>packingContainer13__c</fullName>
    <label>packingContainer13</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ValueSetCTU</valueSetName>
    </valueSet>
</CustomField>