force-app/main/default/objects/Packing_checklist__c/fields/packingContainerDone__c.field-meta.xml
<CustomField>
    <fullName>packingContainerDone__c</fullName>
    <formula>IF( AND( NOT(ISPICKVAL(packingContainer13__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer14__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer15__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer16__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer17__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer18__c, &quot;&apos;&apos;&quot;)),
NOT(ISPICKVAL(packingContainer19__c, &quot;&apos;&apos;&quot;))),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>packingContainerDone</label>
    <type>Checkbox</type>
</CustomField>