force-app/main/default/objects/Packing_checklist__c/fields/packingContainerNo__c.field-meta.xml
<CustomField>
    <fullName>packingContainerNo__c</fullName>
    <formula>IF( OR( ISPICKVAL(packingContainer13__c, &quot;NO&quot;),
ISPICKVAL(packingContainer14__c, &quot;NO&quot;),
ISPICKVAL(packingContainer15__c, &quot;NO&quot;),
ISPICKVAL(packingContainer16__c, &quot;NO&quot;),
ISPICKVAL(packingContainer17__c, &quot;NO&quot;),
ISPICKVAL(packingContainer18__c, &quot;NO&quot;),
ISPICKVAL(packingContainer19__c, &quot;NO&quot;)),
true,
false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>packingContainerNo</label>
    <type>Checkbox</type>
</CustomField>