force-app/main/default/objects/Packing_checklist__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Packing checklists</relationshipLabel>
    <relationshipName>Packing_checklists</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>