force-app/main/default/objects/Packing_checklist__c/fields/ShipmentId__c.field-meta.xml
<CustomField>
    <fullName>ShipmentId__c</fullName>
    <description>This field shall be filled from Apex. This Id and Freight Container Id together serve as a key for the particular checklist. It may contain several shipment Ids in the case of an LCL shipment.</description>
    <label>ShipmentId</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>