force-app/main/default/objects/Packing_checklist__c/fields/Stages_completion__c.field-meta.xml
<CustomField>
    <fullName>Stages_completion__c</fullName>
    <label>Stages completion</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>StageCTU</valueSetName>
    </valueSet>
</CustomField>